Fix image alignment for tablet to top-right. Adjust tablet experience section into flex columns

--- a/style.css
+++ b/style.css
@@ -62,9 +62,7 @@ main {
     /* outline: 1px solid orange; */
 }
 
-.header__nav a {
-    
-}
+.header__nav a {}
 
 .header__home {
     justify-self: flex-start;
@@ -81,7 +79,8 @@ main {
     text-decoration: none;
 }
 
-.header__nav li, footer li {
+.header__nav li,
+footer li {
     list-style: none;
 }
 
@@ -93,7 +92,8 @@ main {
     /* outline: 2px solid salmon; */
 }
 
-.header__home, .header__logos {
+.header__home,
+.header__logos {
     z-index: 1;
 }
 
@@ -101,11 +101,13 @@ main {
     color: var(--green);
 }
 
-nav svg>path, footer svg>path {
+nav svg>path,
+footer svg>path {
     transition: fill var(--transition);
 }
 
-nav svg:hover path, footer svg:hover path {
+nav svg:hover path,
+footer svg:hover path {
     fill: var(--green);
 }
 
@@ -126,15 +128,12 @@ nav svg:hover path, footer svg:hover path {
     outline: 1px solid orange;
 }
 
-.hero__image {          /* Flex item */
+.hero__image {
+    /* Flex item */
     flex-grow: 3;
     flex-shrink: 1;
     padding: 0;
     min-height: 400px;
-}
-
-.image__wrapper {
-
 }
 
 .hero__image img {
@@ -146,8 +145,9 @@ nav svg:hover path, footer svg:hover path {
     /* max-width: 100%; */
 }
 
-.hero__text {           /* Flex item */
-    /* margin-top: 95%; */
+.hero__text {
+    /* Flex item */
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -208,7 +208,7 @@ nav svg:hover path, footer svg:hover path {
 /* EXPERIENCE */
 
 .experience {
-
+    text-align: center;
 }
 
 .experience__wrapper {
@@ -219,15 +219,13 @@ nav svg:hover path, footer svg:hover path {
 
 /* PROJECTS */
 
-.projects__wrapper {
-
-}
+.projects__wrapper {}
 
 .projects {
     color: var(--text-1);
 }
 
-.projects__header { 
+.projects__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -258,7 +256,7 @@ nav svg:hover path, footer svg:hover path {
     align-items: center;
 }
 
-.projects__languages > p {
+.projects__languages>p {
     /* font-size: 1rem; */
     line-height: 1.625;
     letter-spacing: 2.29px;
@@ -281,9 +279,7 @@ nav svg:hover path, footer svg:hover path {
     padding: 20px 0;
 }
 
-.contact__title {
-    
-}
+.contact__title {}
 
 .contact__fields {
     text-align: left;
@@ -361,29 +357,29 @@ footer {
 
 h1 {
     font-size: 2.5rem;
-    font-size: clamp(2.5rem, 1.9rem + 3vw, 5.5rem);
+    font-size: var(--fs-h1);
     font-weight: 700;
     line-height: 1em;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 h2 {
     font-size: 2rem;
-    font-size: clamp(2rem, 1.8rem + 1vw, 3rem);
+    font-size: var(--fs-h2);
     font-weight: 700;
     line-height: 1.16em;
 }
 
 h3 {
     font-size: 2rem;
-    font-size: clamp(2rem, 2rem + 0vw, 2rem);
+    font-size: var(--fs-h3);
     font-weight: 700;
     line-height: 1.33em;
 }
 
 p {
     font-size: 1rem;
-    font-size: clamp(1rem, 0.79rem + 0.89vw, 1.125rem);
+    font-size: var(--fs-p);
     font-weight: 500;
     line-height: 1.55em;
     color: var(--text-2);
@@ -424,7 +420,7 @@ a.underline:hover {
 
     /* Small tablet and above */
     .wrapper {
-        width: 92%;
+        width: var(--container-width-tablet);
     }
 
     .header__nav {
@@ -439,49 +435,65 @@ a.underline:hover {
         gap: 20px 32px;
     }
 
-    .hero {                  /* Flex container  */
+    .hero {
+        /* Flex container  */
         flex-direction: row-reverse;
+        outline: 2px solid blue;
+        min-height: 0;
+        /* max-height: 200px; */
+    }
+
+    .hero__image {
+        /* Flex item */
+        /* flex: 1 1; */
+    }
+
+    .hero__image img {
+        translate: 0;
+        left: auto;
+        right: 0;
+        outline: 2px solid pink;
+    }
+
+    .hero__text {
         justify-content: flex-start;
-    }
-
-    .hero__image {          /* Flex item */
-        /* flex: 2 2; */
-        /* margin: -10px; */
-        /* padding: 0; */
-        flex: 1 1;
-        outline: 4px solid blue; 
-        min-height: 80vw;
-        height: 0;
-        margin-left: -60px;
-    }
-
-    .hero__text {    /* flex item */
-        display: flex;
         text-align: start;
-        flex-direction: column;
-        justify-content: space-around;
-        gap: 20px 0;
-        outline: 2px solid lime;
-        min-height: 80vw;
-        height: 0;
+        gap: 40px 0;
+        /* outline: 2px solid lime; */
+        /* padding-bottom: 200px; */
+        width: 58vw;
+    }
+
+    .hero__text * {
+        /* outline: 1px solid red; */
+    }
+
+    .hero__headline {
+        
     }
 
     .hero__rings {
         translate: -40%;
         outline: 1px solid orange;
     }
-    
-    .image__wrapper {
-        translate: 50px;
-        /* z-index: -1; */
+    .experience {
+        margin-top: 23vw;
+        padding: 20px 0;
+        text-align: start;
     }
-
-    .image__wrapper img {
-        /* right: 0; */
+    .experience__wrapper {
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap;
     }
-
-    
-    
+    .experience__box {
+        flex-basis: 50%;
+        margin-top: 20px;
+    }
+    .projects {
+        margin-top: 50px;
+        border: none;
+    }
 }
 
 @media screen and (min-width: 992px) {
